<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">The Lab</string>
    <string name="google_maps_key">AIzaSyDuywb98tO1xXHb9lflC2iTLs_67jgihgQ</string>
    <string name="google_ads_key">ca-app-pub-2216496940806622~2620241949</string>
    <string name="server_client_id">759951804103-0v514jklc3ljftruf5f7dfb397b7hoce.apps.googleusercontent.com</string>
    <string name="fcm_notification_channel_id">miscellaneous</string>
    <string name="action_settings">Settings</string>
    <string name="force_crash">Force Crash</string>
    <string name="connection_settings">Connection info</string>
    <string name="location_settings">location_settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="action_continue">Continue</string>
    <string name="action_done">Done</string>
    <string name="action_later">Later</string>
    <string name="action_enter">Enter</string>
    <string name="action_exit">Quit</string>
    <string name="action_retry">Retry</string>
    <string name="action_go">GO !</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Remove</string>
    <string name="network_status_connected">Good! Connected to Internet</string>
    <string name="network_status_disconnected">Sorry! Not connected to internet</string>
    <string name="network_status_pending">Retry! Internet connection pending</string>
    <string name="network_status_lost">Lost! Connection lost. Try to reconnect</string>
    <string name="network_check_connection">Please check your cellular network or Wi-Fi network</string>
    <string name="main_channel_name">TheLab Notification Main Channel</string>
    <string name="main_channel_description">App Main notification channel</string>
    <string name="notification_title">The Lab is live</string>
    <string name="notification_content_text">Welcome to The Lab, explore several features in this app</string>
    <string name="notification_big_text">"Welcome to The Lab, explore several features in this app that implements a lot of cool things</string>
    <string name="splash_background_transition_name">splash_background_transition_name</string>
    <string name="title_activity_login">Login</string>
    <string name="remember_me">Remember my credentials</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="err_msg_wrong_email_or_password">Email or password is not correct. Please verified your credentials.</string>
    <string name="btn_go_to_main_activity">Go To Home</string>
    <string name="no_account_register"><![CDATA[<u>You don\'t have any account ? Sign up</u>]]></string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_license_agreement">EULA</string>
    <string name="eula_content">
        <![CDATA[
<br />
        <h1>TheLab EULA (End-User License Agreement)</h1>
<br />

<p><b>Version 12.0.14, effective as of December 5, 2023</b></p>
<br />

<h4><b>IMPORTANT! READ CAREFULLY:</b></h4>
<br />

<h1>
  THIS IS A LEGAL AGREEMENT. BY CLICKING ON THE “I AGREE” (OR SIMILAR) BUTTON
  THAT IS PRESENTED TO YOU AT THE TIME OF PURCHASE, OR BY DOWNLOADING,
  INSTALLING, COPYING, SAVING ON YOUR DEVICE, OR OTHERWISE USING JETBRAINS
  SOFTWARE, SUPPORT, OR PRODUCTS, YOU BECOME A PARTY TO THIS AGREEMENT, YOU
  DECLARE YOU HAVE THE LEGAL CAPACITY TO ENTER INTO THIS AGREEMENT, AND YOU
  CONSENT TO BE BOUND BY ALL THE TERMS AND CONDITIONS SET FORTH BELOW.
</h1>
<br />

<p>
  <b>TheLab and Customer may each also be referred to individually as a “Party” or jointly as the “Parties”.</b>
</p>
<br />

<p>
  1. PARTIES<br />
  1.1. “Customer” or “you” means the individual specified, the sole proprietor
  or natural person with sufficient legal capacity to enter into this Agreement
  using the Redistributable Product in accordance with this Agreement. For the
  avoidance of doubt, Customer is a natural person and not a corporation,
  company, partnership, association, or other entity or organization.<br />
  1.2. “TheLab” or “we” means XtremeLabs/TheLab, having its principal place of
  business at Paris, 93100, France, registered in the Commercial Register
  maintained by the Municipal Court of Paris, Section C, File 86211, ID No.: 265
  02 275.<br /><br />
  For further information, please contact us at
  <u>xtremelabs.support@gmail.com</u>.
</p>
        ]]></string>
    <string name="accept_agreement_license">I accept the end-user license agreement displayed above</string>
    <string name="err_msg_license_agreement_approval_mandatory">Your terms of service agreement\'s approval is mandatory in order to continue.</string>
    <string name="title_activity_user_inscription_form">User Form</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_date_of_birth">Date Of Birth (optional)</string>
    <string name="err_msg_form_last_name">Enter your last name</string>
    <string name="err_msg_form_first_name">Enter your first name</string>
    <string name="err_msg_form_email">Wrong email format, verify your email</string>
    <string name="err_msg_form_password">Enter a correct password</string>
    <string name="err_msg_form_confirm_password">Make sure that the password matches the one above</string>
    <string name="err_msg_form_phone_number">Enter your phone number</string>
    <string name="err_msg_form_date_of_birth">Enter your date of birth</string>
    <string name="title_activity_successful_sign_up">Validation</string>
    <string name="msg_title_saving_in_progress">Saving in progress</string>
    <string name="msg_text_please_wait">Please, wait until the process is finished…</string>
    <string name="msg_title_congratulations">Congratulations !</string>
    <string name="dialog_msg_successfully_signed_up">
        <![CDATA[
        You are successfully registered to TheLab app.<br /><br />We wish you to have a nice experience while using TheLab application.<br /><br />
]]></string>
    <string name="title_main_page">Choose your testing app</string>
    <string name="load_new_data">Load new random data</string>
    <string name="welcome_to_placeholder">Welcome to</string>
    <string name="the_lab_eleven_placeholder">TheLab 11</string>
    <string name="what_s_new_placeholder">What\s new?</string>
    <string name="app_not_to_miss_placeholder">Most recent Applications, must watch !</string>
    <string name="app_list_placeholder">Applications</string>
    <string name="app_list_detail_placeholder">List of features that composes the application</string>
    <string name="more_info">More Details</string>
    <string name="service_started">007</string>
    <string name="service_stopped">Service stopped</string>
    <string name="service_connected">Service is connected</string>
    <string name="service_disconnected">Service is disconnected</string>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
    <string name="hint_content_title">Video\'s title</string>
    <string name="hint_content_description">Video\'s description link</string>
    <string name="lire">Play</string>
    <string name="ajouter_aux_favoris">Add to favorite</string>
    <string name="error_audio_error">audio error</string>
    <string name="error_client">client error</string>
    <string name="error_permission">error permission</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_search">Search</string>
    <string name="action_supervise">Supervisor</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="info_settings">Device info</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
</resources>