<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ContactsDatabaseActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_supervisor"
        android:icon="@drawable/ic_supervised_user"
        android:title="@string/action_supervise"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_add"
        android:iconTint="@color/white"
        android:orderInCategory="100"
        android:title="@string/action_add_contact"
        app:showAsAction="ifRoom" />

</menu>