<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_action_bar_height"
    android:background="@drawable/top_action_bar_scrim"
    android:paddingStart="@dimen/top_action_bar_padding_horizontal"
    android:paddingEnd="@dimen/top_action_bar_padding_horizontal">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/cd_close_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cd_settings_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/ic_settings" />

    <ImageView
        android:id="@+id/flash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/settings_button"
        android:contentDescription="@string/cd_flash_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/ic_flash_off" />
</RelativeLayout>
