<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ranklabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/ranklabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:layout_toEndOf="@id/ranklabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/countrylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ranklabel"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/countrylabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rank"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:layout_toEndOf="@id/countrylabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/populationlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countrylabel"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/populationlabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:layout_toEndOf="@id/populationlabel" />

</RelativeLayout>