<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_margin"
    tools:background="@color/default_dark">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_weight="2"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                tools:textColor="@color/black" />
        </ScrollView>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_accept_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:text="@string/accept_agreement_license"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/small_margin"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/action_continue"
            android:textColor="@color/jumbo"
            app:backgroundTint="@color/transparent"
            tools:ignore="UnusedAttribute" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>